--- a/.env.development.example.anvil
+++ b/.env.development.example.anvil
@@ -11,6 +11,10 @@ NEXT_PUBLIC_TOKEN_DECIMALS=18
 NEXT_PUBLIC_BLOCK_TIME_MS=1200 # 出块时间(*1000示例,非真实)
 NEXT_PUBLIC_TOKEN_PREFIX=Test
 
+# USDT
+NEXT_PUBLIC_USDT_SYMBOL=TUSDT
+NEXT_PUBLIC_USDT_ADDRESS=
+
 # 源abi文件所在目录
 NEXT_PUBLIC_FOUNDRY_CORE_ABI_PATH=../LOVE20-core/out/
 NEXT_PUBLIC_FOUNDRY_PERIPHERAL_ABI_PATH=../LOVE20-peripheral/out/
