--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,6 @@
 # 版本号
-NEXT_PUBLIC_APP_VERSION=1.2.11
+# TUSTD-LOVE20池 + 线上地址版 2025.09.29
+NEXT_PUBLIC_APP_VERSION=1.0.1 
 
 # 公链相关参数
 NEXT_PUBLIC_CHAIN=thinkium70001
@@ -7,10 +8,15 @@ NEXT_PUBLIC_CHAIN_ID=70001
 NEXT_PUBLIC_CHAIN_NAME='Thinkium Mainnet Chain 1'
 NEXT_PUBLIC_THINKIUM_RPC_URL=https://proxy1.thinkiumrpc.net
 NEXT_PUBLIC_NATIVE_TOKEN_SYMBOL=TKM
-NEXT_PUBLIC_FIRST_PARENT_TOKEN_SYMBOL=TestTKM20
+NEXT_PUBLIC_FIRST_PARENT_TOKEN_SYMBOL=TKM20
 NEXT_PUBLIC_TOKEN_DECIMALS=18
-NEXT_PUBLIC_BLOCK_TIME_MS=2590 # 出块时间(秒*1000)
-NEXT_PUBLIC_TOKEN_PREFIX=Test
+NEXT_PUBLIC_BLOCK_TIME_MS=2868 # 出块时间(秒*1000)
+NEXT_PUBLIC_TOKEN_PREFIX=
+NEXT_PUBLIC_BASE_PATH=/interface
+
+# USDT
+NEXT_PUBLIC_USDT_SYMBOL=TUSDT
+NEXT_PUBLIC_USDT_ADDRESS=0x47Ba4471046fC0442078CF1519924cb205F02c7a
 
 # 源abi文件所在目录
 NEXT_PUBLIC_FOUNDRY_CORE_ABI_PATH=../LOVE20-core/out/
@@ -20,45 +26,39 @@ NEXT_PUBLIC_FOUNDRY_PERIPHERAL_ABI_PATH=../LOVE20-peripheral/out/
 NEXT_PUBLIC_SENTRY_DSN="https://32d15636e6eccd2fe3a2efd629ba5573@o1244770.ingest.us.sentry.io/4509888318472192"
 
 # LOVE20 参数
-NEXT_PUBLIC_FIRST_TOKEN_SYMBOL=TestLOVE20
+NEXT_PUBLIC_FIRST_TOKEN_SYMBOL=LOVE20
 NEXT_PUBLIC_MAX_SUPPLY=10000000000000000000000000000  # 1e10 * 1e18 (10 billion tokens)
-NEXT_PUBLIC_FIRST_PARENT_TOKEN_FUNDRAISING_GOAL=100000000000000000  # ForTest 1e17 (0.1 TKM)
+NEXT_PUBLIC_FIRST_PARENT_TOKEN_FUNDRAISING_GOAL=2000000000000000000000000  # 2e24 (2,000,000 TKM)
 NEXT_PUBLIC_PARENT_TOKEN_FUNDRAISING_GOAL=20000000000000000000000000  # 2 * 1e7 * 1e18 (20 million tokens)
 NEXT_PUBLIC_LAUNCH_AMOUNT=1000000000000000000000000000  # 1e9 * 1e18 (1 billion tokens, 10% of total supply)
-NEXT_PUBLIC_WITHDRAW_WAITING_BLOCKS=48 # ForTest  2 minutes
-NEXT_PUBLIC_MIN_GOV_REWARD_MINTS_TO_LAUNCH=2 # ForTest how many gov reward mints to launch one token
-NEXT_PUBLIC_PHASE_BLOCKS=120 # ForTest 5 minutes
-NEXT_PUBLIC_PROMISED_WAITING_PHASES_MIN=1 # ForTest
-NEXT_PUBLIC_PROMISED_WAITING_PHASES_MAX=4 # ForTest
+NEXT_PUBLIC_WITHDRAW_WAITING_BLOCKS=30126 # 1 day
+NEXT_PUBLIC_MIN_GOV_REWARD_MINTS_TO_LAUNCH=180 # how many gov reward mints to launch one token
+NEXT_PUBLIC_PHASE_BLOCKS=30126 # 1 day
+NEXT_PUBLIC_PROMISED_WAITING_PHASES_MIN=30
+NEXT_PUBLIC_PROMISED_WAITING_PHASES_MAX=120
 NEXT_PUBLIC_SUBMIT_MIN_PER_THOUSAND=3  # 0.3% gov votes
-NEXT_PUBLIC_MAX_VERIFICATION_KEY_LENGTH=32
-NEXT_PUBLIC_JOIN_END_PHASE_BLOCKS=8 # last 20 seconds fobid to join
+NEXT_PUBLIC_MAX_VERIFICATION_KEY_LENGTH=64
+NEXT_PUBLIC_JOIN_END_PHASE_BLOCKS=105 # last 5 minutes fobid to join
 NEXT_PUBLIC_ACTION_REWARD_MIN_VOTE_PER_THOUSAND=30  # 3%
 NEXT_PUBLIC_ROUND_REWARD_GOV_PER_THOUSAND=1  # 0.1%
 NEXT_PUBLIC_ROUND_REWARD_ACTION_PER_THOUSAND=1  # 0.1%
 
 # 合约地址
-NEXT_PUBLIC_CONTRACT_ADDRESS_ROOT_PARENT_TOKEN=0x154f9FC7F45BFf3b1b851794F3b70be0A7DAFF5b
-NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_FACTORY=0x766605787913C3879Cd2B01E0db104DAfC59AE86
-NEXT_PUBLIC_CONTRACT_ADDRESS_TOKEN_FACTORY=0x86776c46E1F964f871488AEc06c66CeE7a2D2591
-NEXT_PUBLIC_CONTRACT_ADDRESS_LAUNCH=0xA7743859fC72f9c5caD2170a682a73f69394c578
-NEXT_PUBLIC_CONTRACT_ADDRESS_STAKE=0x4E01f73A456aF36798B5EfAEF23273077c687Dc2
-NEXT_PUBLIC_CONTRACT_ADDRESS_SUBMIT=0xC29DED8A4C4F8917f42A06CFe5013918640076d4
-NEXT_PUBLIC_CONTRACT_ADDRESS_VOTE=0x230ba07145D1aE5A10fBBA49667AC12c0b17962c
-NEXT_PUBLIC_CONTRACT_ADDRESS_JOIN=0x74E53B89e49D134F5e2687e5c4bC6647Df9429f5
-NEXT_PUBLIC_CONTRACT_ADDRESS_RANDOM=0xBA30B36c6ef4185A9268DdF8945793D1643dFCd1
-NEXT_PUBLIC_CONTRACT_ADDRESS_VERIFY=0xbBb0C124Ba026020fEa05260947C9B843f026611
-NEXT_PUBLIC_CONTRACT_ADDRESS_MINT=0xC86ce7B242b33d50308E9e6cE71faD2A4DACCC5f
-NEXT_PUBLIC_CONTRACT_ADDRESS_FIRST_TOKEN=0x0d18D46A63F58958980cf97903Bd732107593728
+NEXT_PUBLIC_CONTRACT_ADDRESS_ROOT_PARENT_TOKEN=0xc3Da46ED14dBd79922027031BB5D688A81139e01
+NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_FACTORY=0x0ce7Aa2069d92De630AFf1B6b512f5E47af6Ffc8
+NEXT_PUBLIC_CONTRACT_ADDRESS_TOKEN_FACTORY=0xb54B07039A7b14706C8ADfed32cDdEbe68110cF7
+NEXT_PUBLIC_CONTRACT_ADDRESS_LAUNCH=0xfbb35BfeDf07E238c8Ef60aB937B4DB2CDA2D268
+NEXT_PUBLIC_CONTRACT_ADDRESS_STAKE=0xb0d291C3B036860c8D5E2C681bFa391F787b26Cb
+NEXT_PUBLIC_CONTRACT_ADDRESS_SUBMIT=0xeBB295af1D4ee9ed92e55EFF4ca5Eb8D4AB81aCE
+NEXT_PUBLIC_CONTRACT_ADDRESS_VOTE=0x4623f58Ed1Ad367fa4F47fC1969CbB3a22893435
+NEXT_PUBLIC_CONTRACT_ADDRESS_JOIN=0xACea4f086BE05BeA47f3A56788FA3919C7f40799
+NEXT_PUBLIC_CONTRACT_ADDRESS_RANDOM=0xc4288508477D50820eBf79153065B23E8457b54B
+NEXT_PUBLIC_CONTRACT_ADDRESS_VERIFY=0x547b4a36980Ec030fBfC0162eE4B4904d9Cc0Da9
+NEXT_PUBLIC_CONTRACT_ADDRESS_MINT=0x0fdcaA7853ACedbA6af8Cd4BcCF452d38b82FabC
+NEXT_PUBLIC_CONTRACT_ADDRESS_FIRST_TOKEN=0x6458E25680765Add4e2ca8d5a31fA08f5e1b6e4a
 
-NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_TOKENVIEWER=0xE1f269Fe5aD45800cc1e9451c8a115634776f591
-NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_ROUNDVIEWER=0xeFfDc4849736B549cC27e6eCcF73cdb8963D315E
-NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_MINTVIEWER=0x16553822Cd06439997087eE175d268535Dda3Ac9
-NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_HUB=0x33B000522AC7eDF3B5ce4ED5Bf00ea84B797c776
-NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0xB7BF6Fa4824Ed73673dBc1884500A59F2d044B8C
-# public_test
-# NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_TOKENVIEWER=0xbF27995397714206C62C91D37D58f9bE11a24461
-# NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_ROUNDVIEWER=0x88F7090e0cd6115bA459A9A3532E833033873719
-# NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_MINTVIEWER=0xCAb4f522C921B91f03cA5666Da8f7CB413026C79
-# NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_HUB=0x1D39e70A1F439102520746702664c4c0A56E2CBE
-# NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0x108d959e23Ce22DDF7f443D369DBF74D6b4854DD
+NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_TOKENVIEWER=0x1DC7e680D833fF3470A3280eE663b27BC56fc32c
+NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_ROUNDVIEWER=0x5ccD8177598f69BE5c50F0e53c89b702f93aA055
+NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_MINTVIEWER=0xC248316aa0CCDD2A8b91A589FFF142Efe6D8d6d0
+NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_HUB=0xbc8c89d8f3Cb1DDb6625e13D3F5487CAcbd396EE
+NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0xBE7A91095198ddc6356CD7751c3dECa98321FE37
