扩展行动基本

--- a/.env.development.example.anvil
+++ b/.env.development.example.anvil
@@ -8,7 +8,7 @@ NEXT_PUBLIC_ANVIL_RPC_URL=http://127.0.0.1:8545
 NEXT_PUBLIC_NATIVE_TOKEN_SYMBOL=ETH
 NEXT_PUBLIC_FIRST_PARENT_TOKEN_SYMBOL=ETH20
 NEXT_PUBLIC_TOKEN_DECIMALS=18
-NEXT_PUBLIC_BLOCK_TIME_MS=1200 # 出块时间(*1000示例,非真实)
+NEXT_PUBLIC_BLOCK_TIME_MS=1000000 # 出块时间(*1000示例,非真实)
 NEXT_PUBLIC_TOKEN_PREFIX=Test
 
 # USDT
@@ -18,8 +18,10 @@ NEXT_PUBLIC_USDT_ADDRESS=
 # 源abi文件所在目录
 NEXT_PUBLIC_FOUNDRY_CORE_ABI_PATH=../LOVE20-core/out/
 NEXT_PUBLIC_FOUNDRY_PERIPHERAL_ABI_PATH=../LOVE20-peripheral/out/
+NEXT_PUBLIC_FOUNDRY_EXTENSIONS_CENTER_ABI_PATH=../LOVE20TKM/extension/out/
+NEXT_PUBLIC_FOUNDRY_EXTENSIONS_STAKELP_ABI_PATH=../LOVE20TKM/extension-stakelp/out/
 
-# LOVE20参数
+# LOVE20 参数
 NEXT_PUBLIC_FIRST_TOKEN_SYMBOL=TestLOVE20
 NEXT_PUBLIC_MAX_SUPPLY=10000000000000000000000000000  # 1e10 * 1e18 (10 billion tokens)
 NEXT_PUBLIC_FIRST_PARENT_TOKEN_FUNDRAISING_GOAL=100000000000000000  # 1e17 (0.1 TKM)
@@ -36,7 +38,6 @@ NEXT_PUBLIC_JOIN_END_PHASE_BLOCKS=1 # last 1 blocks fobid to join
 NEXT_PUBLIC_ACTION_REWARD_MIN_VOTE_PER_THOUSAND=30  # 3%
 NEXT_PUBLIC_ROUND_REWARD_GOV_PER_THOUSAND=1  # 0.1%
 NEXT_PUBLIC_ROUND_REWARD_ACTION_PER_THOUSAND=1  # 0.1%
-
 
 # 合约地址
 NEXT_PUBLIC_CONTRACT_ADDRESS_ROOT_PARENT_TOKEN=0x5FbDB2315678afecb367f032d93F642f64180aa3
@@ -56,5 +57,7 @@ NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_TOKENVIEWER=0x59b670e9fA9D0A427751Af201D
 NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_ROUNDVIEWER=0x322813Fd9A801c5507c9de605d63CEA4f2CE6c44
 NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_MINTVIEWER=0x4A679253410272dd5232B3Ff7cF5dbB88f295319
 NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_HUB=0x09635F643e140090A9A8Dcd712eD6285858ceBef
-NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0x67d269191c92Caf3cD7723F116c85e6E9bf55933
+NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0x0355B7B8cb128fA5692729Ab3AAa199C1753f726
 
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_CENTER=0x5f3f1dBD7B74C6B46e8c44f98792A1dAf8d69154
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_STAKELP=0x1fA02b2d6A771842690194Cf62D91bdd92BfE28d
