--- a/.env.public_test
+++ b/.env.public_test
@@ -1,5 +1,5 @@
 # 版本号
-NEXT_PUBLIC_APP_VERSION=1.0.0
+NEXT_PUBLIC_APP_VERSION=1.0.1
 
 # 公链相关参数
 NEXT_PUBLIC_CHAIN=thinkium70001
@@ -20,6 +20,8 @@ NEXT_PUBLIC_USDT_ADDRESS=0x47Ba4471046fC0442078CF1519924cb205F02c7a
 # 源abi文件所在目录
 NEXT_PUBLIC_FOUNDRY_CORE_ABI_PATH=../LOVE20-core/out/
 NEXT_PUBLIC_FOUNDRY_PERIPHERAL_ABI_PATH=../LOVE20-peripheral/out/
+NEXT_PUBLIC_FOUNDRY_EXTENSIONS_CENTER_ABI_PATH=../LOVE20TKM/extension/out/
+NEXT_PUBLIC_FOUNDRY_EXTENSIONS_STAKELP_ABI_PATH=../LOVE20TKM/extension-stakelp/out/
 
 # sentry
 NEXT_PUBLIC_SENTRY_DSN="https://32d15636e6eccd2fe3a2efd629ba5573@o1244770.ingest.us.sentry.io/4509888318472192"
@@ -61,3 +63,6 @@ NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_ROUNDVIEWER=0xb856bb7c0A6784d297a04d71c8
 NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_MINTVIEWER=0x679815468E019B770457449Fd76e800da9a92631
 NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_HUB=0x90561dEa749d9F44E642fce26ea7bC3D94ee7E31
 NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0x3B6a2369dD700903eA7bABC741E7B202BF1700d2
+
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_CENTER=0x488d7Cc689Ff4DD291b4bC8Df6557b9C918CDD78
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_STAKELP=0x10E9A677f5a6123Fe11362BaE651649Ee6Eea39C
