--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "next start",
     "generate:abi": "cross-env NODE_ENV=development ts-node scripts/generateAbiTs.ts",
     "generate:env": "cross-env NODE_ENV=development ts-node scripts/generate-env.js",
+    "generate:selectors": "cross-env NODE_ENV=development ts-node scripts/generateFunctionSelectors.ts",
     "postinstall": "update-browserslist-db"
   },
   "dependencies": {
