--- a/.env.public_test
+++ b/.env.public_test
@@ -20,6 +20,7 @@ NEXT_PUBLIC_USDT_ADDRESS=0x47Ba4471046fC0442078CF1519924cb205F02c7a
 # 源abi文件所在目录
 NEXT_PUBLIC_FOUNDRY_CORE_ABI_PATH=../LOVE20-core/out/
 NEXT_PUBLIC_FOUNDRY_PERIPHERAL_ABI_PATH=../LOVE20-peripheral/out/
+NEXT_PUBLIC_FOUNDRY_EXTENSIONS_GROUP_ABI_PATH=../LOVE20TKM/group/out/
 
 # sentry
 NEXT_PUBLIC_SENTRY_DSN="https://32d15636e6eccd2fe3a2efd629ba5573@o1244770.ingest.us.sentry.io/4509888318472192"
@@ -61,3 +62,5 @@ NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_ROUNDVIEWER=0xb856bb7c0A6784d297a04d71c8
 NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_MINTVIEWER=0x679815468E019B770457449Fd76e800da9a92631
 NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_HUB=0x90561dEa749d9F44E642fce26ea7bC3D94ee7E31
 NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0x3B6a2369dD700903eA7bABC741E7B202BF1700d2
+
+NEXT_PUBLIC_CONTRACT_ADDRESS_GROUP=0x1ff49899A864A90AEb4c158c18A990c6993c1667
