--- a/.env.production
+++ b/.env.production
@@ -20,6 +20,7 @@ NEXT_PUBLIC_USDT_ADDRESS=0x47Ba4471046fC0442078CF1519924cb205F02c7a
 # 源abi文件所在目录
 NEXT_PUBLIC_FOUNDRY_CORE_ABI_PATH=../LOVE20-core/out/
 NEXT_PUBLIC_FOUNDRY_PERIPHERAL_ABI_PATH=../LOVE20-peripheral/out/
+NEXT_PUBLIC_FOUNDRY_EXTENSIONS_GROUP_ABI_PATH=../LOVE20TKM/group/out/
 
 # sentry
 NEXT_PUBLIC_SENTRY_DSN="https://32d15636e6eccd2fe3a2efd629ba5573@o1244770.ingest.us.sentry.io/4509888318472192"
@@ -61,3 +62,5 @@ NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_ROUNDVIEWER=0xa42CAcd51b0F27c863b0De3e79
 NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_MINTVIEWER=0xC248316aa0CCDD2A8b91A589FFF142Efe6D8d6d0
 NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_HUB=0xbc8c89d8f3Cb1DDb6625e13D3F5487CAcbd396EE
 NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0xBE7A91095198ddc6356CD7751c3dECa98321FE37
+
+NEXT_PUBLIC_CONTRACT_ADDRESS_GROUP=
