改为对接新的extension-lp合约

--- a/.env.development.example.anvil
+++ b/.env.development.example.anvil
@@ -18,8 +18,9 @@ NEXT_PUBLIC_USDT_ADDRESS=
 # 源abi文件所在目录
 NEXT_PUBLIC_FOUNDRY_CORE_ABI_PATH=../LOVE20-core/out/
 NEXT_PUBLIC_FOUNDRY_PERIPHERAL_ABI_PATH=../LOVE20-peripheral/out/
+NEXT_PUBLIC_FOUNDRY_EXTENSIONS_GROUP_ABI_PATH=../LOVE20TKM/group/out/
 NEXT_PUBLIC_FOUNDRY_EXTENSIONS_CENTER_ABI_PATH=../LOVE20TKM/extension/out/
-NEXT_PUBLIC_FOUNDRY_EXTENSIONS_STAKELP_ABI_PATH=../LOVE20TKM/extension-stakelp/out/
+NEXT_PUBLIC_FOUNDRY_EXTENSIONS_LP_ABI_PATH=../LOVE20TKM/extension-lp/out/
 
 # LOVE20 参数
 NEXT_PUBLIC_FIRST_TOKEN_SYMBOL=TestLOVE20
@@ -59,5 +60,6 @@ NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_MINTVIEWER=0x4A679253410272dd5232B3Ff7cF
 NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_HUB=0x09635F643e140090A9A8Dcd712eD6285858ceBef
 NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0x67d269191c92Caf3cD7723F116c85e6E9bf55933
 
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_CENTER=0xE6E340D132b5f46d1e472DebcD681B2aBc16e57E
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_LP=0xc3e53F4d16Ae77Db1c982e75a937B9f60FE63690
+NEXT_PUBLIC_CONTRACT_ADDRESS_GROUP=0x70e0bA845a1A0F2DA3359C97E0285013525FFC49
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_CENTER=0x4826533B4897376654Bb4d4AD88B7faFD0C98528
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_LP=0x99bbA657f2BbC93c02D617f8bA121cB8Fc104Acf
