--- a/.env.development.example.anvil
+++ b/.env.development.example.anvil
@@ -18,9 +18,10 @@ NEXT_PUBLIC_USDT_ADDRESS=
 # 源abi文件所在目录
 NEXT_PUBLIC_FOUNDRY_CORE_ABI_PATH=../LOVE20-core/out/
 NEXT_PUBLIC_FOUNDRY_PERIPHERAL_ABI_PATH=../LOVE20-peripheral/out/
-NEXT_PUBLIC_FOUNDRY_EXTENSIONS_GROUP_ABI_PATH=../LOVE20TKM/group/out/
+NEXT_PUBLIC_FOUNDRY_GROUP_ABI_PATH=../LOVE20TKM/group/out/
 NEXT_PUBLIC_FOUNDRY_EXTENSIONS_CENTER_ABI_PATH=../LOVE20TKM/extension/out/
 NEXT_PUBLIC_FOUNDRY_EXTENSIONS_LP_ABI_PATH=../LOVE20TKM/extension-lp/out/
+NEXT_PUBLIC_FOUNDRY_EXTENSIONS_GROUP_ABI_PATH=../LOVE20TKM/extension-group/out/
 
 # LOVE20 参数
 NEXT_PUBLIC_FIRST_TOKEN_SYMBOL=TestLOVE20
@@ -63,3 +64,4 @@ NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0x67d269191c92Caf3cD7723F116c85e6
 NEXT_PUBLIC_CONTRACT_ADDRESS_GROUP=0x70e0bA845a1A0F2DA3359C97E0285013525FFC49
 NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_CENTER=0x4826533B4897376654Bb4d4AD88B7faFD0C98528
 NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_LP=0x99bbA657f2BbC93c02D617f8bA121cB8Fc104Acf
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_GROUP=
