--- a/.env.development.example.thinkium801
+++ b/.env.development.example.thinkium801
@@ -1,48 +1,70 @@
-
 NEXT_PUBLIC_APP_VERSION=1.0.0
 
 # 公链相关参数
 NEXT_PUBLIC_CHAIN=thinkium801
 NEXT_PUBLIC_CHAIN_ID=801
+NEXT_PUBLIC_CHAIN_NAME='Thinkium Test Chain 801'
 NEXT_PUBLIC_THINKIUM_RPC_URL=https://rpc-testnet.ruleos.com
 NEXT_PUBLIC_NATIVE_TOKEN_SYMBOL=TKM
 NEXT_PUBLIC_FIRST_PARENT_TOKEN_SYMBOL=TestTKM20
 NEXT_PUBLIC_TOKEN_DECIMALS=18
-NEXT_PUBLIC_BLOCK_TIME_MS=2550 # 出块时间(秒*1000)
+NEXT_PUBLIC_BLOCK_TIME_MS=2868 # 出块时间(秒*1000)
+NEXT_PUBLIC_TOKEN_PREFIX=
+
+# USDT
+NEXT_PUBLIC_USDT_SYMBOL=TestUSDT
+NEXT_PUBLIC_USDT_ADDRESS=0x71754a8889b43d02692407969098FbDEC743c6E4
 
 # 源abi文件所在目录
 NEXT_PUBLIC_FOUNDRY_CORE_ABI_PATH=../LOVE20-core/out/
 NEXT_PUBLIC_FOUNDRY_PERIPHERAL_ABI_PATH=../LOVE20-peripheral/out/
+NEXT_PUBLIC_FOUNDRY_GROUP_ABI_PATH=../LOVE20TKM/group/out/
+NEXT_PUBLIC_FOUNDRY_EXTENSIONS_CENTER_ABI_PATH=../LOVE20TKM/extension/out/
+NEXT_PUBLIC_FOUNDRY_EXTENSIONS_LP_ABI_PATH=../LOVE20TKM/extension-lp/out/
+NEXT_PUBLIC_FOUNDRY_EXTENSIONS_GROUP_ABI_PATH=../LOVE20TKM/extension-group/out/
 
-# LOVE20参数
+# LOVE20 参数
 NEXT_PUBLIC_FIRST_TOKEN_SYMBOL=TestLOVE20
 NEXT_PUBLIC_MAX_SUPPLY=10000000000000000000000000000  # 1e10 * 1e18 (10 billion tokens)
+NEXT_PUBLIC_FIRST_PARENT_TOKEN_FUNDRAISING_GOAL=1000000000000000000  # 1e18 (1 TKM)
+NEXT_PUBLIC_PARENT_TOKEN_FUNDRAISING_GOAL=20000000000000000000000000  # 2 * 1e7 * 1e18 (20 million tokens)
+NEXT_PUBLIC_LAUNCH_AMOUNT=1000000000000000000000000000  # 1e9 * 1e18 (1 billion tokens, 10% of total supply)
 NEXT_PUBLIC_WITHDRAW_WAITING_BLOCKS=40 # 2 minutes
-NEXT_PUBLIC_CHILD_TOKEN_WAITING_BLOCKS=400 # 20 minutes
-NEXT_PUBLIC_PHASE_BLOCKS=117 # 5 minutes
+NEXT_PUBLIC_MIN_GOV_REWARD_MINTS_TO_LAUNCH=2# how many gov reward mints to launch one token
+NEXT_PUBLIC_PHASE_BLOCKS=111 # ForTest 5 minutes
 NEXT_PUBLIC_PROMISED_WAITING_PHASES_MIN=1
 NEXT_PUBLIC_PROMISED_WAITING_PHASES_MAX=2
 NEXT_PUBLIC_SUBMIT_MIN_PER_THOUSAND=5  # 0.5% gov votes
-NEXT_PUBLIC_JOIN_END_PHASE_BLOCKS=20 # last 1 minutes fobid to join
+NEXT_PUBLIC_MAX_VERIFICATION_KEY_LENGTH=32
+NEXT_PUBLIC_JOIN_END_PHASE_BLOCKS=1 # last blocks fobid to join
 NEXT_PUBLIC_ACTION_REWARD_MIN_VOTE_PER_THOUSAND=50  # 5%
 NEXT_PUBLIC_ROUND_REWARD_GOV_PER_THOUSAND=1  # 0.1%
 NEXT_PUBLIC_ROUND_REWARD_ACTION_PER_THOUSAND=1  # 0.1%
 
-# LOVE20合约地址
-NEXT_PUBLIC_CONTRACT_ADDRESS_ROOT_PARENT_TOKEN=0x43Ebef92c8877B29409e5Bc43E60819E58dd49C9
-NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_FACTORY=0x4924461740A4d0FB83795A77D4D7E46D5F7E8432
-NEXT_PUBLIC_CONTRACT_ADDRESS_TOKEN_FACTORY=0x79b75BbB18eC79983F90BB3C1F28F0D752269748
-NEXT_PUBLIC_CONTRACT_ADDRESS_LAUNCH=0x4edcf84610115D8008fe21b43766F6CaA0a986c8
-NEXT_PUBLIC_CONTRACT_ADDRESS_STAKE=0x942B14f6F2A5E3283502f777666A0d4c1beE51b3
-NEXT_PUBLIC_CONTRACT_ADDRESS_SUBMIT=0x3d2234F72E28c9b5c2b1aa6Ee83842F1E37A765e
-NEXT_PUBLIC_CONTRACT_ADDRESS_VOTE=0x568f04A872CeA62ABC497b2bA048f3924C4D23dA
-NEXT_PUBLIC_CONTRACT_ADDRESS_JOIN=0x889c4436c4EC92bE399FC65B5630964a9eaCa52E
-NEXT_PUBLIC_CONTRACT_ADDRESS_RANDOM=0x2382a043244B79914f4652deD77c88d8778B6e84
-NEXT_PUBLIC_CONTRACT_ADDRESS_VERIFY=0xB86d832498e3D521901f336Ca6555a6f69143ec2
-NEXT_PUBLIC_CONTRACT_ADDRESS_MINT=0x9215CF35B468fe77f2Db81dC636eB962cd974034
+# 合约地址
+NEXT_PUBLIC_CONTRACT_ADDRESS_ROOT_PARENT_TOKEN=0xCA0A9221cEf73e2bfee658e9ee33597F9353Bc63
+NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_FACTORY=0x4a3867275E1E5Be43b6C0023B3A4756b05430326
+NEXT_PUBLIC_CONTRACT_ADDRESS_TOKEN_FACTORY=0xc773100e79a08a754C710009C3eE301b3Dd2e284
+NEXT_PUBLIC_CONTRACT_ADDRESS_LAUNCH=0x41bd2Af9441a5D3CA9b52A42fc6F1f54CA59490C
+NEXT_PUBLIC_CONTRACT_ADDRESS_STAKE=0x8324B397c48cBF0D721Dc3d0D185ADb735ea913d
+NEXT_PUBLIC_CONTRACT_ADDRESS_SUBMIT=0x35152c02C6D93fb2323B3270B5fa84297023e4dB
+NEXT_PUBLIC_CONTRACT_ADDRESS_VOTE=0x5Cc1Abd55DdEdc82639Fc0f730bF57BA3253639e
+NEXT_PUBLIC_CONTRACT_ADDRESS_JOIN=0xB4FF0d92F46B5EA917D7A943801e8b25159EeCC4
+NEXT_PUBLIC_CONTRACT_ADDRESS_RANDOM=0xB6D579695678a5c0BDD67CD3727c19e26F07C761
+NEXT_PUBLIC_CONTRACT_ADDRESS_VERIFY=0x85d045066e7f94eacE9EAeA75233BeB759847d3a
+NEXT_PUBLIC_CONTRACT_ADDRESS_MINT=0xC7cf4f6d78e450fb5de138BfEA3D3F9a5d56a16F
+NEXT_PUBLIC_CONTRACT_ADDRESS_FIRST_TOKEN=0xDDcFA6f828ae756BdB0815Cb5d016062332b03e5
 
-NEXT_PUBLIC_CONTRACT_ADDRESS_FIRST_TOKEN=0x9215CF35B468fe77f2Db81dC636eB962cd974034
+NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_TOKENVIEWER=0x09A8EDfb34ADf7aB974985e99607B821609398c8
+NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_ROUNDVIEWER=0x4904A816Ea6DC9a1919187A526aa994Cc63BBeCb
+NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_MINTVIEWER=0xCD1cef28226e0C3EC1fB53D2dCb7b4A14D525597
+NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_HUB=0xdF1e5B97842F9ffAaA0f068A6565E654E4FF6ccf
+NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0xa7C4C831DB86d32294D265E98fd0C738e857A14E
 
-NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_DATAVIEWER=0x0e04D2F00E367012162cA5975bde44f1E31f1352
-NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0x19AC53bD9BBCECFDD970E5E8CeA7771e5bcc2cCD
-NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_HUB=0x3CB4E3397166C3E587499251FbbD5AB8F9A82eE1
+NEXT_PUBLIC_CONTRACT_ADDRESS_GROUP=0x33E2806ed48a3f402aB1e06e466f233CFBB10f5a
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_CENTER=0xF4B0a14D81056a6DB6f7A12e530407714703AD7D
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_LP=0x0B4E6a5B59e0F7B80DC2c2110c2C0e51a5187695
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_DISTRUST=0x91a59c22BE91a39c43C7E96a166A486Ab4Fd7FE9
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_MANAGER=0xC81C57cb7d870824Ac0cBc4247D8bEB85D69488D
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_GROUP_ACTION=0x8351235dDc445D9b1FbEfdE071112c59901F97cF
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_GROUP_SERVICE=0x08E43C2fB1Ebb8cE90161f45D12306F1F5125Ef6
