--- a/.env.test
+++ b/.env.test
@@ -1,63 +1,70 @@
-# 版本号
-NEXT_PUBLIC_APP_VERSION=1.0.1 
+NEXT_PUBLIC_APP_VERSION=1.0.0
 
 # 公链相关参数
-NEXT_PUBLIC_CHAIN=thinkium70001
-NEXT_PUBLIC_CHAIN_ID=70001
-NEXT_PUBLIC_CHAIN_NAME='Thinkium Mainnet Chain 1'
-NEXT_PUBLIC_THINKIUM_RPC_URL=https://proxy1.thinkiumrpc.net
+NEXT_PUBLIC_CHAIN=thinkium801
+NEXT_PUBLIC_CHAIN_ID=801
+NEXT_PUBLIC_CHAIN_NAME='Thinkium Test Chain 801'
+NEXT_PUBLIC_THINKIUM_RPC_URL=https://rpc-testnet.ruleos.com
 NEXT_PUBLIC_NATIVE_TOKEN_SYMBOL=TKM
-NEXT_PUBLIC_FIRST_PARENT_TOKEN_SYMBOL=TKM20
+NEXT_PUBLIC_FIRST_PARENT_TOKEN_SYMBOL=TestTKM20
 NEXT_PUBLIC_TOKEN_DECIMALS=18
 NEXT_PUBLIC_BLOCK_TIME_MS=2868 # 出块时间(秒*1000)
 NEXT_PUBLIC_TOKEN_PREFIX=
-NEXT_PUBLIC_BASE_PATH=/interface
 
 # USDT
-NEXT_PUBLIC_USDT_SYMBOL=TUSDT
-NEXT_PUBLIC_USDT_ADDRESS=0x47Ba4471046fC0442078CF1519924cb205F02c7a
+NEXT_PUBLIC_USDT_SYMBOL=TestUSDT
+NEXT_PUBLIC_USDT_ADDRESS=0x71754a8889b43d02692407969098FbDEC743c6E4
 
 # 源abi文件所在目录
 NEXT_PUBLIC_FOUNDRY_CORE_ABI_PATH=../LOVE20-core/out/
 NEXT_PUBLIC_FOUNDRY_PERIPHERAL_ABI_PATH=../LOVE20-peripheral/out/
-
-# sentry
-NEXT_PUBLIC_SENTRY_DSN="https://32d15636e6eccd2fe3a2efd629ba5573@o1244770.ingest.us.sentry.io/4509888318472192"
+NEXT_PUBLIC_FOUNDRY_GROUP_ABI_PATH=../LOVE20TKM/group/out/
+NEXT_PUBLIC_FOUNDRY_EXTENSIONS_CENTER_ABI_PATH=../LOVE20TKM/extension/out/
+NEXT_PUBLIC_FOUNDRY_EXTENSIONS_LP_ABI_PATH=../LOVE20TKM/extension-lp/out/
+NEXT_PUBLIC_FOUNDRY_EXTENSIONS_GROUP_ABI_PATH=../LOVE20TKM/extension-group/out/
 
 # LOVE20 参数
-NEXT_PUBLIC_FIRST_TOKEN_SYMBOL=LOVE20
+NEXT_PUBLIC_FIRST_TOKEN_SYMBOL=TestLOVE20
 NEXT_PUBLIC_MAX_SUPPLY=10000000000000000000000000000  # 1e10 * 1e18 (10 billion tokens)
-NEXT_PUBLIC_FIRST_PARENT_TOKEN_FUNDRAISING_GOAL=2000000000000000000000000  # 2e24 (2,000,000 TKM)
+NEXT_PUBLIC_FIRST_PARENT_TOKEN_FUNDRAISING_GOAL=1000000000000000000  # 1e18 (1 TKM)
 NEXT_PUBLIC_PARENT_TOKEN_FUNDRAISING_GOAL=20000000000000000000000000  # 2 * 1e7 * 1e18 (20 million tokens)
 NEXT_PUBLIC_LAUNCH_AMOUNT=1000000000000000000000000000  # 1e9 * 1e18 (1 billion tokens, 10% of total supply)
-NEXT_PUBLIC_WITHDRAW_WAITING_BLOCKS=30126 # 1 day
-NEXT_PUBLIC_MIN_GOV_REWARD_MINTS_TO_LAUNCH=180 # how many gov reward mints to launch one token
-NEXT_PUBLIC_PHASE_BLOCKS=30126 # 1 day
-NEXT_PUBLIC_PROMISED_WAITING_PHASES_MIN=30
-NEXT_PUBLIC_PROMISED_WAITING_PHASES_MAX=120
-NEXT_PUBLIC_SUBMIT_MIN_PER_THOUSAND=3  # 0.3% gov votes
-NEXT_PUBLIC_MAX_VERIFICATION_KEY_LENGTH=64
-NEXT_PUBLIC_JOIN_END_PHASE_BLOCKS=105 # last 5 minutes fobid to join
-NEXT_PUBLIC_ACTION_REWARD_MIN_VOTE_PER_THOUSAND=30  # 3%
+NEXT_PUBLIC_WITHDRAW_WAITING_BLOCKS=40 # 2 minutes
+NEXT_PUBLIC_MIN_GOV_REWARD_MINTS_TO_LAUNCH=2# how many gov reward mints to launch one token
+NEXT_PUBLIC_PHASE_BLOCKS=111 # ForTest 5 minutes
+NEXT_PUBLIC_PROMISED_WAITING_PHASES_MIN=1
+NEXT_PUBLIC_PROMISED_WAITING_PHASES_MAX=2
+NEXT_PUBLIC_SUBMIT_MIN_PER_THOUSAND=5  # 0.5% gov votes
+NEXT_PUBLIC_MAX_VERIFICATION_KEY_LENGTH=32
+NEXT_PUBLIC_JOIN_END_PHASE_BLOCKS=1 # last blocks fobid to join
+NEXT_PUBLIC_ACTION_REWARD_MIN_VOTE_PER_THOUSAND=50  # 5%
 NEXT_PUBLIC_ROUND_REWARD_GOV_PER_THOUSAND=1  # 0.1%
 NEXT_PUBLIC_ROUND_REWARD_ACTION_PER_THOUSAND=1  # 0.1%
 
 # 合约地址
-NEXT_PUBLIC_CONTRACT_ADDRESS_ROOT_PARENT_TOKEN=0xc3Da46ED14dBd79922027031BB5D688A81139e01
-NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_FACTORY=0x0ce7Aa2069d92De630AFf1B6b512f5E47af6Ffc8
-NEXT_PUBLIC_CONTRACT_ADDRESS_TOKEN_FACTORY=0xb54B07039A7b14706C8ADfed32cDdEbe68110cF7
-NEXT_PUBLIC_CONTRACT_ADDRESS_LAUNCH=0xfbb35BfeDf07E238c8Ef60aB937B4DB2CDA2D268
-NEXT_PUBLIC_CONTRACT_ADDRESS_STAKE=0xb0d291C3B036860c8D5E2C681bFa391F787b26Cb
-NEXT_PUBLIC_CONTRACT_ADDRESS_SUBMIT=0xeBB295af1D4ee9ed92e55EFF4ca5Eb8D4AB81aCE
-NEXT_PUBLIC_CONTRACT_ADDRESS_VOTE=0x4623f58Ed1Ad367fa4F47fC1969CbB3a22893435
-NEXT_PUBLIC_CONTRACT_ADDRESS_JOIN=0xACea4f086BE05BeA47f3A56788FA3919C7f40799
-NEXT_PUBLIC_CONTRACT_ADDRESS_RANDOM=0xc4288508477D50820eBf79153065B23E8457b54B
-NEXT_PUBLIC_CONTRACT_ADDRESS_VERIFY=0x547b4a36980Ec030fBfC0162eE4B4904d9Cc0Da9
-NEXT_PUBLIC_CONTRACT_ADDRESS_MINT=0x0fdcaA7853ACedbA6af8Cd4BcCF452d38b82FabC
-NEXT_PUBLIC_CONTRACT_ADDRESS_FIRST_TOKEN=0x6458E25680765Add4e2ca8d5a31fA08f5e1b6e4a
+NEXT_PUBLIC_CONTRACT_ADDRESS_ROOT_PARENT_TOKEN=0xCA0A9221cEf73e2bfee658e9ee33597F9353Bc63
+NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_FACTORY=0x4a3867275E1E5Be43b6C0023B3A4756b05430326
+NEXT_PUBLIC_CONTRACT_ADDRESS_TOKEN_FACTORY=0xc773100e79a08a754C710009C3eE301b3Dd2e284
+NEXT_PUBLIC_CONTRACT_ADDRESS_LAUNCH=0x41bd2Af9441a5D3CA9b52A42fc6F1f54CA59490C
+NEXT_PUBLIC_CONTRACT_ADDRESS_STAKE=0x8324B397c48cBF0D721Dc3d0D185ADb735ea913d
+NEXT_PUBLIC_CONTRACT_ADDRESS_SUBMIT=0x35152c02C6D93fb2323B3270B5fa84297023e4dB
+NEXT_PUBLIC_CONTRACT_ADDRESS_VOTE=0x5Cc1Abd55DdEdc82639Fc0f730bF57BA3253639e
+NEXT_PUBLIC_CONTRACT_ADDRESS_JOIN=0xB4FF0d92F46B5EA917D7A943801e8b25159EeCC4
+NEXT_PUBLIC_CONTRACT_ADDRESS_RANDOM=0xB6D579695678a5c0BDD67CD3727c19e26F07C761
+NEXT_PUBLIC_CONTRACT_ADDRESS_VERIFY=0x85d045066e7f94eacE9EAeA75233BeB759847d3a
+NEXT_PUBLIC_CONTRACT_ADDRESS_MINT=0xC7cf4f6d78e450fb5de138BfEA3D3F9a5d56a16F
+NEXT_PUBLIC_CONTRACT_ADDRESS_FIRST_TOKEN=0xDDcFA6f828ae756BdB0815Cb5d016062332b03e5
 
-NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_TOKENVIEWER=0x1DC7e680D833fF3470A3280eE663b27BC56fc32c
-NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_ROUNDVIEWER=0x5ccD8177598f69BE5c50F0e53c89b702f93aA055
-NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_MINTVIEWER=0xC248316aa0CCDD2A8b91A589FFF142Efe6D8d6d0
-NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_HUB=0xbc8c89d8f3Cb1DDb6625e13D3F5487CAcbd396EE
-NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0xBE7A91095198ddc6356CD7751c3dECa98321FE37
+NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_TOKENVIEWER=0x09A8EDfb34ADf7aB974985e99607B821609398c8
+NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_ROUNDVIEWER=0x4904A816Ea6DC9a1919187A526aa994Cc63BBeCb
+NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_MINTVIEWER=0xCD1cef28226e0C3EC1fB53D2dCb7b4A14D525597
+NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_HUB=0xdF1e5B97842F9ffAaA0f068A6565E654E4FF6ccf
+NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0xa7C4C831DB86d32294D265E98fd0C738e857A14E
+
+NEXT_PUBLIC_CONTRACT_ADDRESS_GROUP=0x33E2806ed48a3f402aB1e06e466f233CFBB10f5a
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_CENTER=0xF4B0a14D81056a6DB6f7A12e530407714703AD7D
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_LP=0x0B4E6a5B59e0F7B80DC2c2110c2C0e51a5187695
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_DISTRUST=0x91a59c22BE91a39c43C7E96a166A486Ab4Fd7FE9
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_MANAGER=0xC81C57cb7d870824Ac0cBc4247D8bEB85D69488D
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_GROUP_ACTION=0x8351235dDc445D9b1FbEfdE071112c59901F97cF
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_GROUP_SERVICE=0x08E43C2fB1Ebb8cE90161f45D12306F1F5125Ef6
