更新 public_test 扩展行动参数

--- a/.env.public_test
+++ b/.env.public_test
@@ -1,5 +1,5 @@
 # 版本号
-NEXT_PUBLIC_APP_VERSION=1.0.1
+NEXT_PUBLIC_APP_VERSION=1.1.0
 
 # 公链相关参数
 NEXT_PUBLIC_CHAIN=thinkium70001
@@ -11,7 +11,7 @@ NEXT_PUBLIC_FIRST_PARENT_TOKEN_SYMBOL=TestTKM20
 NEXT_PUBLIC_TOKEN_DECIMALS=18
 NEXT_PUBLIC_BLOCK_TIME_MS=2868 # 出块时间(秒*1000)
 NEXT_PUBLIC_TOKEN_PREFIX=Test
-NEXT_PUBLIC_BASE_PATH=/interface-test
+NEXT_PUBLIC_BASE_PATH=
 
 # USDT
 NEXT_PUBLIC_USDT_SYMBOL=TUSDT
@@ -65,7 +65,11 @@ NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_MINTVIEWER=0x679815468E019B770457449Fd76
 NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_HUB=0x90561dEa749d9F44E642fce26ea7bC3D94ee7E31
 NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0x3B6a2369dD700903eA7bABC741E7B202BF1700d2
 
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_CENTER=0x02e8157894600B4a495643d474D213DF75f42f5a
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_LP=0xDBC0aD81BC0a699c3475344B6b03F867355D5Dd8
-NEXT_PUBLIC_CONTRACT_ADDRESS_GROUP=0x1ff49899A864A90AEb4c158c18A990c6993c1667
-
+NEXT_PUBLIC_CONTRACT_ADDRESS_GROUP=0xcc4CF1C46DefE5182f0848f2C1F0c6Ee8Ccc1A65
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_CENTER=0x5bE0eC21fd4CAE8D2214dC39108AB02e06F0D460
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_LP=0x07A7535cA0cf1c643013DE7A274F1f8fBc968B38
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_MANAGER=0xf6816380f208F83Fa3120039790b8972A4B66628
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_JOIN=0xDf58Fba741995eb9c07e0Cb58c3Ad549D5eCb0A7
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_VERIFY=0xB6e705cCAB94FA9e8f3C9A3Cb1D424c253876b5D
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_GROUP_ACTION=0xf4A62726550D030E40E0bAD613E3DB6608b152e4
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_GROUP_SERVICE=0x725A45963DcEf67cc2A34Ec3B537310894f030b0
