样式优化：链群加入等

--- a/.env.public_test
+++ b/.env.public_test
@@ -11,7 +11,7 @@ NEXT_PUBLIC_FIRST_PARENT_TOKEN_SYMBOL=TestTKM20
 NEXT_PUBLIC_TOKEN_DECIMALS=18
 NEXT_PUBLIC_BLOCK_TIME_MS=2868 # 出块时间(秒*1000)
 NEXT_PUBLIC_TOKEN_PREFIX=Test
-NEXT_PUBLIC_BASE_PATH=
+NEXT_PUBLIC_BASE_PATH=/interface-test
 
 # USDT
 NEXT_PUBLIC_USDT_SYMBOL=TUSDT
