部署合约到 public_test

--- a/.env.public_test
+++ b/.env.public_test
@@ -1,5 +1,5 @@
 # 版本号
-NEXT_PUBLIC_APP_VERSION=1.1.6
+NEXT_PUBLIC_APP_VERSION=1.1.7
 
 # 公链相关参数
 NEXT_PUBLIC_CHAIN=thinkium70001
@@ -20,9 +20,10 @@ NEXT_PUBLIC_USDT_ADDRESS=0x47Ba4471046fC0442078CF1519924cb205F02c7a
 # 源abi文件所在目录
 NEXT_PUBLIC_FOUNDRY_CORE_ABI_PATH=../LOVE20-core/out/
 NEXT_PUBLIC_FOUNDRY_PERIPHERAL_ABI_PATH=../LOVE20-peripheral/out/
+NEXT_PUBLIC_FOUNDRY_GROUP_ABI_PATH=../LOVE20TKM/group/out/
 NEXT_PUBLIC_FOUNDRY_EXTENSIONS_CENTER_ABI_PATH=../LOVE20TKM/extension/out/
 NEXT_PUBLIC_FOUNDRY_EXTENSIONS_LP_ABI_PATH=../LOVE20TKM/extension-lp/out/
-NEXT_PUBLIC_FOUNDRY_EXTENSIONS_GROUP_ABI_PATH=../LOVE20TKM/group/out/
+NEXT_PUBLIC_FOUNDRY_EXTENSIONS_GROUP_ABI_PATH=../LOVE20TKM/extension-group/out/
 
 # sentry
 NEXT_PUBLIC_SENTRY_DSN="https://32d15636e6eccd2fe3a2efd629ba5573@o1244770.ingest.us.sentry.io/4509888318472192"
@@ -65,11 +66,11 @@ NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_MINTVIEWER=0x679815468E019B770457449Fd76
 NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_HUB=0x90561dEa749d9F44E642fce26ea7bC3D94ee7E31
 NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0x3B6a2369dD700903eA7bABC741E7B202BF1700d2
 
-NEXT_PUBLIC_CONTRACT_ADDRESS_GROUP=0xd40e5Fc81dB44234dF66A1fFc6832428dcf10dAb
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_CENTER=0x731231aFa81b07b1A798ae8F5Aa6875b53461d8d
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_LP=0x407679b4eb96531b79d92E931FA6D41A1739C59c
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_MANAGER=0x37b4946D486A3eDc8C92FF2A9f3F400d5B4A352F
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_JOIN=0x5727AD8F83d071507e34A314793d4A970A92F5FA
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_VERIFY=0xFe17250154d9f0B00D10046A4AAE03Aa2f5449d2
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_GROUP_ACTION=0x36CF5e1863921c63Da65122754422431edF806E2
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_GROUP_SERVICE=0xd44C58d7e6B3D5D5BBE99fd88a910B7D1CEA6aCB
+NEXT_PUBLIC_CONTRACT_ADDRESS_GROUP=0xC9191641a4A403bC2B96bcBA6620bf84AD42b7f2
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_CENTER=0x8c9d05437b8c58Ab37621E19779B6448BfF127EF
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_LP=0x08465Ed0CfD4f6Cfd6Ef8eA6D44F24af7d3e8206
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_MANAGER=0xea74997cC6A3Ba4Ba548e21484C997F153242515
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_JOIN=0x1191325bBCc08cbA6D7166d9752ddDD3E06eB1f4
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_VERIFY=0x135e14db22718014Ab0F0B4B4F8e73fb0C8e45Aa
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_GROUP_ACTION=0x2d5548c194B3D0433086c06a13FcC6426D106bc6
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_FACTORY_GROUP_SERVICE=0xB3B537daC2361aCFB095DCF08fc7d1f8e0F2Ad25
