--- a/.env.test
+++ b/.env.test
@@ -1,19 +1,21 @@
-NEXT_PUBLIC_APP_VERSION=1.1.0
+# 版本号
+NEXT_PUBLIC_APP_VERSION=1.3.1
 
 # 公链相关参数
-NEXT_PUBLIC_CHAIN=thinkium801
-NEXT_PUBLIC_CHAIN_ID=801
-NEXT_PUBLIC_CHAIN_NAME='Thinkium Test Chain 801'
-NEXT_PUBLIC_THINKIUM_RPC_URL=https://rpc-testnet.ruleos.com
+NEXT_PUBLIC_CHAIN=thinkium70001
+NEXT_PUBLIC_CHAIN_ID=70001
+NEXT_PUBLIC_CHAIN_NAME='Thinkium Mainnet Chain 1'
+NEXT_PUBLIC_THINKIUM_RPC_URL=https://proxy1.thinkiumrpc.net
 NEXT_PUBLIC_NATIVE_TOKEN_SYMBOL=TKM
-NEXT_PUBLIC_FIRST_PARENT_TOKEN_SYMBOL=TestTKM20
+NEXT_PUBLIC_FIRST_PARENT_TOKEN_SYMBOL=TKM20
 NEXT_PUBLIC_TOKEN_DECIMALS=18
 NEXT_PUBLIC_BLOCK_TIME_MS=2868 # 出块时间(秒*1000)
 NEXT_PUBLIC_TOKEN_PREFIX=
+NEXT_PUBLIC_BASE_PATH=/interface
 
 # USDT
-NEXT_PUBLIC_USDT_SYMBOL=TestUSDT
-NEXT_PUBLIC_USDT_ADDRESS=0x71754a8889b43d02692407969098FbDEC743c6E4
+NEXT_PUBLIC_USDT_SYMBOL=TUSDT
+NEXT_PUBLIC_USDT_ADDRESS=0x47Ba4471046fC0442078CF1519924cb205F02c7a
 
 # 源abi文件所在目录
 NEXT_PUBLIC_FOUNDRY_CORE_ABI_PATH=../LOVE20-core/out/
@@ -24,51 +26,52 @@ NEXT_PUBLIC_FOUNDRY_EXTENSIONS_LP_ABI_PATH=../LOVE20TKM/extension-lp/out/
 NEXT_PUBLIC_FOUNDRY_EXTENSIONS_GROUP_ABI_PATH=../LOVE20TKM/extension-group/out/
 
 # sentry
-NEXT_PUBLIC_SENTRY_DSN=
+NEXT_PUBLIC_SENTRY_DSN="https://32d15636e6eccd2fe3a2efd629ba5573@o1244770.ingest.us.sentry.io/4509888318472192"
 
 # LOVE20 参数
-NEXT_PUBLIC_FIRST_TOKEN_SYMBOL=TestLOVE20
+NEXT_PUBLIC_FIRST_TOKEN_SYMBOL=LOVE20
 NEXT_PUBLIC_MAX_SUPPLY=10000000000000000000000000000  # 1e10 * 1e18 (10 billion tokens)
-NEXT_PUBLIC_FIRST_PARENT_TOKEN_FUNDRAISING_GOAL=1000000000000000000  # 1e18 (1 TKM)
+NEXT_PUBLIC_FIRST_PARENT_TOKEN_FUNDRAISING_GOAL=2000000000000000000000000  # 2e24 (2,000,000 TKM)
 NEXT_PUBLIC_PARENT_TOKEN_FUNDRAISING_GOAL=20000000000000000000000000  # 2 * 1e7 * 1e18 (20 million tokens)
 NEXT_PUBLIC_LAUNCH_AMOUNT=1000000000000000000000000000  # 1e9 * 1e18 (1 billion tokens, 10% of total supply)
-NEXT_PUBLIC_WITHDRAW_WAITING_BLOCKS=40 # 2 minutes
-NEXT_PUBLIC_MIN_GOV_REWARD_MINTS_TO_LAUNCH=2# how many gov reward mints to launch one token
-NEXT_PUBLIC_PHASE_BLOCKS=111 # ForTest 5 minutes
-NEXT_PUBLIC_PROMISED_WAITING_PHASES_MIN=1
-NEXT_PUBLIC_PROMISED_WAITING_PHASES_MAX=2
-NEXT_PUBLIC_SUBMIT_MIN_PER_THOUSAND=5  # 0.5% gov votes
-NEXT_PUBLIC_MAX_VERIFICATION_KEY_LENGTH=32
-NEXT_PUBLIC_JOIN_END_PHASE_BLOCKS=1 # last blocks fobid to join
-NEXT_PUBLIC_ACTION_REWARD_MIN_VOTE_PER_THOUSAND=50  # 5%
+NEXT_PUBLIC_WITHDRAW_WAITING_BLOCKS=30126 # 1 day
+NEXT_PUBLIC_MIN_GOV_REWARD_MINTS_TO_LAUNCH=180 # how many gov reward mints to launch one token
+NEXT_PUBLIC_PHASE_BLOCKS=30126 # 1 day
+NEXT_PUBLIC_PROMISED_WAITING_PHASES_MIN=30
+NEXT_PUBLIC_PROMISED_WAITING_PHASES_MAX=120
+NEXT_PUBLIC_SUBMIT_MIN_PER_THOUSAND=3  # 0.3% gov votes
+NEXT_PUBLIC_MAX_VERIFICATION_KEY_LENGTH=64
+NEXT_PUBLIC_JOIN_END_PHASE_BLOCKS=105 # last 5 minutes fobid to join
+NEXT_PUBLIC_ACTION_REWARD_MIN_VOTE_PER_THOUSAND=30  # 3%
 NEXT_PUBLIC_ROUND_REWARD_GOV_PER_THOUSAND=1  # 0.1%
 NEXT_PUBLIC_ROUND_REWARD_ACTION_PER_THOUSAND=1  # 0.1%
 
 # 合约地址
-NEXT_PUBLIC_CONTRACT_ADDRESS_ROOT_PARENT_TOKEN=0xCA0A9221cEf73e2bfee658e9ee33597F9353Bc63
-NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_FACTORY=0x4a3867275E1E5Be43b6C0023B3A4756b05430326
-NEXT_PUBLIC_CONTRACT_ADDRESS_TOKEN_FACTORY=0xc773100e79a08a754C710009C3eE301b3Dd2e284
-NEXT_PUBLIC_CONTRACT_ADDRESS_LAUNCH=0x41bd2Af9441a5D3CA9b52A42fc6F1f54CA59490C
-NEXT_PUBLIC_CONTRACT_ADDRESS_STAKE=0x8324B397c48cBF0D721Dc3d0D185ADb735ea913d
-NEXT_PUBLIC_CONTRACT_ADDRESS_SUBMIT=0x35152c02C6D93fb2323B3270B5fa84297023e4dB
-NEXT_PUBLIC_CONTRACT_ADDRESS_VOTE=0x5Cc1Abd55DdEdc82639Fc0f730bF57BA3253639e
-NEXT_PUBLIC_CONTRACT_ADDRESS_JOIN=0xB4FF0d92F46B5EA917D7A943801e8b25159EeCC4
-NEXT_PUBLIC_CONTRACT_ADDRESS_RANDOM=0xB6D579695678a5c0BDD67CD3727c19e26F07C761
-NEXT_PUBLIC_CONTRACT_ADDRESS_VERIFY=0x85d045066e7f94eacE9EAeA75233BeB759847d3a
-NEXT_PUBLIC_CONTRACT_ADDRESS_MINT=0xC7cf4f6d78e450fb5de138BfEA3D3F9a5d56a16F
-NEXT_PUBLIC_CONTRACT_ADDRESS_FIRST_TOKEN=0xDDcFA6f828ae756BdB0815Cb5d016062332b03e5
+NEXT_PUBLIC_CONTRACT_ADDRESS_ROOT_PARENT_TOKEN=0xc3Da46ED14dBd79922027031BB5D688A81139e01
+NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_FACTORY=0x0ce7Aa2069d92De630AFf1B6b512f5E47af6Ffc8
+NEXT_PUBLIC_CONTRACT_ADDRESS_TOKEN_FACTORY=0xb54B07039A7b14706C8ADfed32cDdEbe68110cF7
+NEXT_PUBLIC_CONTRACT_ADDRESS_LAUNCH=0xfbb35BfeDf07E238c8Ef60aB937B4DB2CDA2D268
+NEXT_PUBLIC_CONTRACT_ADDRESS_STAKE=0xb0d291C3B036860c8D5E2C681bFa391F787b26Cb
+NEXT_PUBLIC_CONTRACT_ADDRESS_SUBMIT=0xeBB295af1D4ee9ed92e55EFF4ca5Eb8D4AB81aCE
+NEXT_PUBLIC_CONTRACT_ADDRESS_VOTE=0x4623f58Ed1Ad367fa4F47fC1969CbB3a22893435
+NEXT_PUBLIC_CONTRACT_ADDRESS_JOIN=0xACea4f086BE05BeA47f3A56788FA3919C7f40799
+NEXT_PUBLIC_CONTRACT_ADDRESS_RANDOM=0xc4288508477D50820eBf79153065B23E8457b54B
+NEXT_PUBLIC_CONTRACT_ADDRESS_VERIFY=0x547b4a36980Ec030fBfC0162eE4B4904d9Cc0Da9
+NEXT_PUBLIC_CONTRACT_ADDRESS_MINT=0x0fdcaA7853ACedbA6af8Cd4BcCF452d38b82FabC
+NEXT_PUBLIC_CONTRACT_ADDRESS_FIRST_TOKEN=0x6458E25680765Add4e2ca8d5a31fA08f5e1b6e4a
 
-NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_TOKENVIEWER=0x09A8EDfb34ADf7aB974985e99607B821609398c8
-NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_ROUNDVIEWER=0x4904A816Ea6DC9a1919187A526aa994Cc63BBeCb
-NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_MINTVIEWER=0xCD1cef28226e0C3EC1fB53D2dCb7b4A14D525597
-NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_HUB=0xdF1e5B97842F9ffAaA0f068A6565E654E4FF6ccf
-NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0xa7C4C831DB86d32294D265E98fd0C738e857A14E
+NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_TOKENVIEWER=0x1DC7e680D833fF3470A3280eE663b27BC56fc32c
+NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_ROUNDVIEWER=0xa42CAcd51b0F27c863b0De3e7961590e00E3fc4a
+NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_MINTVIEWER=0xC248316aa0CCDD2A8b91A589FFF142Efe6D8d6d0
+NEXT_PUBLIC_CONTRACT_ADDRESS_PERIPHERAL_HUB=0xbc8c89d8f3Cb1DDb6625e13D3F5487CAcbd396EE
+NEXT_PUBLIC_CONTRACT_ADDRESS_UNISWAP_V2_ROUTER=0xBE7A91095198ddc6356CD7751c3dECa98321FE37
 
-NEXT_PUBLIC_CONTRACT_ADDRESS_GROUP=0x7eD2Eb2dBa4846347AbdceDc8D6af04A876B016A
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_CENTER=0xe20a91fE1D95Be358Cb6A43e25a28A45c6F65e17
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_LP_FACTORY=0x8f598dB03b4A56C59538959cF53c92014165398B
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_MANAGER=0x67b2C477d4F530a2f6FD2451293ED462Ce205110
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_JOIN=0xC4616389c2Ffc75e89edBED8e1172ec032B23efE
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_VERIFY=0xc8b77A46f08ABE207446d458daaD8037138c3Ee9
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_ACTION_FACTORY=0x5cFa04203782EE946b72F2A32755B4e67EEb26F5
-NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_SERVICE_FACTORY=0xA50af2f9804618Ef7Ee65400a266863cE0C70630
+NEXT_PUBLIC_CONTRACT_ADDRESS_GROUP=0xA0a5BB442214988D0c6e707d825640C026fB1d04
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_CENTER=0x37Ddf561323b823144BaE33264f9C5461714846e
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_LP_FACTORY=0x4d53728aF3DB35ec5DF0f717d5FfeC19749d7f11
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_MANAGER=0xf2084E73bF047aF26d72CEFde25e22536a1f37C8
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_JOIN=0xd94e4Fc2108B78Aa57438BFe5E85192687f74322
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_VERIFY=0x6c720b8a9c4803E7D78849E10fe535d862ACbfD1
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_ACTION_FACTORY=0x53Fa19BEeF0a16d3ED5a33Acc3d3E6C805980406
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_RECIPIENTS=0x745470f219836deae285bD7E934CAD85958D1729
+NEXT_PUBLIC_CONTRACT_ADDRESS_EXTENSION_GROUP_SERVICE_FACTORY=0x0b915a64aE1C263E6230D8e8A7Cc39e3F4f4c29f
